@@ -24,6 +24,7 @@
 10. Don't allow copying of cue file tracks do devices.
 11. When calculating collapsed windoe height, take into account size of
     menubar, if it is visible.
+12. Try to ensure menu button width is at least equal to height.
 
 2.0.0
 -----
